src/libqgraphicseffect.h

typedef QMetaObject::Connection QMetaObject__Connection;
typedef struct QColor QColor;
typedef struct QGraphicsColorizeEffect QGraphicsColorizeEffect;
typedef struct QGraphicsEffect QGraphicsEffect;
typedef struct QMetaObject QMetaObject;
typedef struct QMetaObject__Connection QMetaObject__Connection;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QRectF QRectF;
QGraphicsEffect* QGraphicsEffect_new();
QGraphicsEffect* QGraphicsEffect_new2(QObject* parent);
QMetaObject* QGraphicsEffect_MetaObject(const QGraphicsEffect* self);
void* QGraphicsEffect_Metacast(QGraphicsEffect* self, const char* param1);
int QGraphicsEffect_Metacall(QGraphicsEffect* self, int param1, int param2, void** param3);
libqt_string QGraphicsEffect_Tr(const char* s);
QRectF* QGraphicsEffect_BoundingRectFor(const QGraphicsEffect* self, QRectF* sourceRect);
QRectF* QGraphicsEffect_BoundingRect(const QGraphicsEffect* self);
bool QGraphicsEffect_IsEnabled(const QGraphicsEffect* self);
void QGraphicsEffect_SetEnabled(QGraphicsEffect* self, bool enable);
void QGraphicsEffect_Update(QGraphicsEffect* self);
void QGraphicsEffect_Connect_EnabledChanged(QGraphicsEffect* self, intptr_t slot);
void QGraphicsEffect_Draw(QGraphicsEffect* self, QPainter* painter);
void QGraphicsEffect_SourceChanged(QGraphicsEffect* self, int flags);
libqt_string QGraphicsEffect_Tr2(const char* s, const char* c);
libqt_string QGraphicsEffect_Tr3(const char* s, const char* c, int n);
void QGraphicsEffect_UpdateBoundingRect(QGraphicsEffect* self);
bool QGraphicsEffect_SourceIsPixmap(const QGraphicsEffect* self);
QRectF* QGraphicsEffect_SourceBoundingRect(const QGraphicsEffect* self);
void QGraphicsEffect_DrawSource(QGraphicsEffect* self, QPainter* painter);
QPixmap* QGraphicsEffect_SourcePixmap(const QGraphicsEffect* self);
QRectF* QGraphicsEffect_SourceBoundingRect1(const QGraphicsEffect* self, int system);
QPixmap* QGraphicsEffect_SourcePixmap1(const QGraphicsEffect* self, int system);
QPixmap* QGraphicsEffect_SourcePixmap2(const QGraphicsEffect* self, int system, QPoint* offset);
QPixmap* QGraphicsEffect_SourcePixmap3(const QGraphicsEffect* self, int system, QPoint* offset, int mode);
void QGraphicsEffect_Delete(QGraphicsEffect* self);
QGraphicsColorizeEffect* QGraphicsColorizeEffect_new();
QMetaObject* QGraphicsColorizeEffect_MetaObject(const QGraphicsColorizeEffect* self);
void* QGraphicsColorizeEffect_Metacast(QGraphicsColorizeEffect* self, const char* param1);
int QGraphicsColorizeEffect_Metacall(QGraphicsColorizeEffect* self, int param1, int param2, void** param3);
libqt_string QGraphicsColorizeEffect_Tr(const char* s);
QColor* QGraphicsColorizeEffect_Color(const QGraphicsColorizeEffect* self);
double QGraphicsColorizeEffect_Strength(const QGraphicsColorizeEffect* self);
void QGraphicsColorizeEffect_SetColor(QGraphicsColorizeEffect* self, QColor* c);
void QGraphicsColorizeEffect_SetStrength(QGraphicsColorizeEffect* self, double strength);
void QGraphicsColorizeEffect_Draw(QGraphicsColorizeEffect* self, QPainter* painter);
libqt_string QGraphicsColorizeEffect_Tr2(const char* s, const char* c);
libqt_string QGraphicsColorizeEffect_Tr3(const char* s, const char* c, int n);
void QGraphicsColorizeEffect_Delete(QGraphicsColorizeEffect* self);