src/qt/libqgraphicseffect.bf

using System;
using System.Interop;
namespace Qt;

[AllowDuplicates]
public enum QGraphicsEffect__ChangeFlag
{
	SourceAttached = 1,
	SourceDetached = 2,
	SourceBoundingRectChanged = 4,
	SourceInvalidated = 8,
}
[AllowDuplicates]
public enum QGraphicsEffect__PixmapPadMode
{
	NoPad = 0,
	PadToTransparentBorder = 1,
	PadToEffectiveBoundingRect = 2,
}
[AllowDuplicates]
public enum QGraphicsBlurEffect__BlurHint
{
	PerformanceHint = 0,
	QualityHint = 1,
	AnimationHint = 2,
}
public class QGraphicsEffect
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QGraphicsEffect_new();
	}
	
	public ~this()
	{
		CQt.QGraphicsEffect_Delete(this.nativePtr);
	}
	
	public virtual void* MetaObject()
	{
		return CQt.QGraphicsEffect_MetaObject(this.nativePtr);
	}
	
	public virtual void* Metacast(char8[] param1)
	{
		return CQt.QGraphicsEffect_Metacast(this.nativePtr, param1);
	}
	
	public virtual int32 Metacall(int64 param1, int32 param2, void** param3)
	{
		return CQt.QGraphicsEffect_Metacall(this.nativePtr, param1, param2, param3);
	}
	
	public static libqt_string Tr(char8[] s)
	{
		return CQt.QGraphicsEffect_Tr(s);
	}
	
	public virtual void BoundingRectFor(void* sourceRect)
	{
		CQt.QGraphicsEffect_BoundingRectFor(this.nativePtr, sourceRect);
	}
	
	public void BoundingRect()
	{
		CQt.QGraphicsEffect_BoundingRect(this.nativePtr);
	}
	
	public bool IsEnabled()
	{
		return CQt.QGraphicsEffect_IsEnabled(this.nativePtr);
	}
	
	public void SetEnabled(bool enable)
	{
		CQt.QGraphicsEffect_SetEnabled(this.nativePtr, enable);
	}
	
	public void Update()
	{
		CQt.QGraphicsEffect_Update(this.nativePtr);
	}
	
	public virtual void Draw(void* painter)
	{
		CQt.QGraphicsEffect_Draw(this.nativePtr, painter);
	}
	
	public virtual void SourceChanged(int64 flags)
	{
		CQt.QGraphicsEffect_SourceChanged(this.nativePtr, flags);
	}
	
	public void UpdateBoundingRect()
	{
		CQt.QGraphicsEffect_UpdateBoundingRect(this.nativePtr);
	}
	
	public bool SourceIsPixmap()
	{
		return CQt.QGraphicsEffect_SourceIsPixmap(this.nativePtr);
	}
	
	public void SourceBoundingRect()
	{
		CQt.QGraphicsEffect_SourceBoundingRect(this.nativePtr);
	}
	
	public void DrawSource(void* painter)
	{
		CQt.QGraphicsEffect_DrawSource(this.nativePtr, painter);
	}
	
	public void SourcePixmap()
	{
		CQt.QGraphicsEffect_SourcePixmap(this.nativePtr);
	}
	
	public static libqt_string Tr2(char8[] s, char8[] c)
	{
		return CQt.QGraphicsEffect_Tr2(s, c);
	}
	
	public static libqt_string Tr3(char8[] s, char8[] c, int32 n)
	{
		return CQt.QGraphicsEffect_Tr3(s, c, n);
	}
	
	public void SourceBoundingRect1(int64 system)
	{
		CQt.QGraphicsEffect_SourceBoundingRect1(this.nativePtr, system);
	}
	
	public void SourcePixmap1(int64 system)
	{
		CQt.QGraphicsEffect_SourcePixmap1(this.nativePtr, system);
	}
	
	public void SourcePixmap2(int64 system, void* offset)
	{
		CQt.QGraphicsEffect_SourcePixmap2(this.nativePtr, system, offset);
	}
	
	public void SourcePixmap3(int64 system, void* offset, int64 mode)
	{
		CQt.QGraphicsEffect_SourcePixmap3(this.nativePtr, system, offset, mode);
	}
	
	public virtual bool Event(void* event)
	{
		return CQt.QObject_Event(this.nativePtr, event);
	}
	
	public virtual bool EventFilter(void* watched, void* event)
	{
		return CQt.QObject_EventFilter(this.nativePtr, watched, event);
	}
	
	public libqt_string ObjectName()
	{
		return CQt.QObject_ObjectName(this.nativePtr);
	}
	
	public void SetObjectName(void name)
	{
		CQt.QObject_SetObjectName(this.nativePtr, name);
	}
	
	public bool IsWidgetType()
	{
		return CQt.QObject_IsWidgetType(this.nativePtr);
	}
	
	public bool IsWindowType()
	{
		return CQt.QObject_IsWindowType(this.nativePtr);
	}
	
	public bool IsQuickItemType()
	{
		return CQt.QObject_IsQuickItemType(this.nativePtr);
	}
	
	public bool SignalsBlocked()
	{
		return CQt.QObject_SignalsBlocked(this.nativePtr);
	}
	
	public bool BlockSignals(bool b)
	{
		return CQt.QObject_BlockSignals(this.nativePtr, b);
	}
	
	public void* Thread()
	{
		return CQt.QObject_Thread(this.nativePtr);
	}
	
	public void MoveToThread(void* thread)
	{
		CQt.QObject_MoveToThread(this.nativePtr, thread);
	}
	
	public int32 StartTimer(int32 interval)
	{
		return CQt.QObject_StartTimer(this.nativePtr, interval);
	}
	
	public void KillTimer(int32 id)
	{
		CQt.QObject_KillTimer(this.nativePtr, id);
	}
	
	public void*[] Children()
	{
		return CQt.QObject_Children(this.nativePtr);
	}
	
	public void SetParent(void* parent)
	{
		CQt.QObject_SetParent(this.nativePtr, parent);
	}
	
	public void InstallEventFilter(void* filterObj)
	{
		CQt.QObject_InstallEventFilter(this.nativePtr, filterObj);
	}
	
	public void RemoveEventFilter(void* obj)
	{
		CQt.QObject_RemoveEventFilter(this.nativePtr, obj);
	}
	
	public static QMetaObject__Connection Connect(void* sender, void* signal, void* receiver, void* method)
	{
		return CQt.QObject_Connect(sender, signal, receiver, method);
	}
	
	public QMetaObject__Connection Connect2(void* sender, char8[] signal, char8[] member)
	{
		return CQt.QObject_Connect2(this.nativePtr, sender, signal, member);
	}
	
	public static bool Disconnect(void* sender, void* signal, void* receiver, void* member)
	{
		return CQt.QObject_Disconnect(sender, signal, receiver, member);
	}
	
	public static bool DisconnectWithQMetaObjectConnection(QMetaObject__Connection* param1)
	{
		return CQt.QObject_DisconnectWithQMetaObjectConnection(param1);
	}
	
	public void DumpObjectTree()
	{
		CQt.QObject_DumpObjectTree(this.nativePtr);
	}
	
	public void DumpObjectInfo()
	{
		CQt.QObject_DumpObjectInfo(this.nativePtr);
	}
	
	public bool SetProperty(char8[] name, void* value)
	{
		return CQt.QObject_SetProperty(this.nativePtr, name, value);
	}
	
	public void Property(char8[] name)
	{
		CQt.QObject_Property(this.nativePtr, name);
	}
	
	public libqt_string[] DynamicPropertyNames()
	{
		return CQt.QObject_DynamicPropertyNames(this.nativePtr);
	}
	
	public void* BindingStorage()
	{
		return CQt.QObject_BindingStorage(this.nativePtr);
	}
	
	public void* BindingStorage2()
	{
		return CQt.QObject_BindingStorage2(this.nativePtr);
	}
	
	public void* Parent()
	{
		return CQt.QObject_Parent(this.nativePtr);
	}
	
	public bool Inherits(char8[] classname)
	{
		return CQt.QObject_Inherits(this.nativePtr, classname);
	}
	
	public void DeleteLater()
	{
		CQt.QObject_DeleteLater(this.nativePtr);
	}
	
	public int32 StartTimer2(int32 interval, int64 timerType)
	{
		return CQt.QObject_StartTimer2(this.nativePtr, interval, timerType);
	}
	
	public static QMetaObject__Connection Connect5(void* sender, void* signal, void* receiver, void* method, int64 typeVal)
	{
		return CQt.QObject_Connect5(sender, signal, receiver, method, typeVal);
	}
	
	public QMetaObject__Connection Connect4(void* sender, char8[] signal, char8[] member, int64 typeVal)
	{
		return CQt.QObject_Connect4(this.nativePtr, sender, signal, member, typeVal);
	}
	
}
extension CQt
{
	[LinkName("QGraphicsEffect_new")]
	public static extern void* QGraphicsEffect_new();
	[LinkName("QGraphicsEffect_new2")]
	public static extern void* QGraphicsEffect_new2(void* parent);
	[LinkName("QGraphicsEffect_MetaObject")]
	public static extern void* QGraphicsEffect_MetaObject(void* c_this);
	[LinkName("QGraphicsEffect_Metacast")]
	public static extern void* QGraphicsEffect_Metacast(void* c_this, char8[] param1);
	[LinkName("QGraphicsEffect_Metacall")]
	public static extern int32 QGraphicsEffect_Metacall(void* c_this, int64 param1, int32 param2, void** param3);
	[LinkName("QGraphicsEffect_Tr")]
	public static extern libqt_string QGraphicsEffect_Tr(char8[] s);
	[LinkName("QGraphicsEffect_BoundingRectFor")]
	public static extern void QGraphicsEffect_BoundingRectFor(void* c_this, void* sourceRect);
	[LinkName("QGraphicsEffect_BoundingRect")]
	public static extern void QGraphicsEffect_BoundingRect(void* c_this);
	[LinkName("QGraphicsEffect_IsEnabled")]
	public static extern bool QGraphicsEffect_IsEnabled(void* c_this);
	[LinkName("QGraphicsEffect_SetEnabled")]
	public static extern void QGraphicsEffect_SetEnabled(void* c_this, bool enable);
	[LinkName("QGraphicsEffect_Update")]
	public static extern void QGraphicsEffect_Update(void* c_this);
	[LinkName("QGraphicsEffect_Connect_EnabledChanged")]
	public static extern void QGraphicsEffect_Connect_EnabledChanged(void* c_this, c_intptr slot);
	[LinkName("QGraphicsEffect_Draw")]
	public static extern void QGraphicsEffect_Draw(void* c_this, void* painter);
	[LinkName("QGraphicsEffect_SourceChanged")]
	public static extern void QGraphicsEffect_SourceChanged(void* c_this, int64 flags);
	[LinkName("QGraphicsEffect_UpdateBoundingRect")]
	public static extern void QGraphicsEffect_UpdateBoundingRect(void* c_this);
	[LinkName("QGraphicsEffect_SourceIsPixmap")]
	public static extern bool QGraphicsEffect_SourceIsPixmap(void* c_this);
	[LinkName("QGraphicsEffect_SourceBoundingRect")]
	public static extern void QGraphicsEffect_SourceBoundingRect(void* c_this);
	[LinkName("QGraphicsEffect_DrawSource")]
	public static extern void QGraphicsEffect_DrawSource(void* c_this, void* painter);
	[LinkName("QGraphicsEffect_SourcePixmap")]
	public static extern void QGraphicsEffect_SourcePixmap(void* c_this);
	[LinkName("QGraphicsEffect_Tr2")]
	public static extern libqt_string QGraphicsEffect_Tr2(char8[] s, char8[] c);
	[LinkName("QGraphicsEffect_Tr3")]
	public static extern libqt_string QGraphicsEffect_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QGraphicsEffect_SourceBoundingRect1")]
	public static extern void QGraphicsEffect_SourceBoundingRect1(void* c_this, int64 system);
	[LinkName("QGraphicsEffect_SourcePixmap1")]
	public static extern void QGraphicsEffect_SourcePixmap1(void* c_this, int64 system);
	[LinkName("QGraphicsEffect_SourcePixmap2")]
	public static extern void QGraphicsEffect_SourcePixmap2(void* c_this, int64 system, void* offset);
	[LinkName("QGraphicsEffect_SourcePixmap3")]
	public static extern void QGraphicsEffect_SourcePixmap3(void* c_this, int64 system, void* offset, int64 mode);
	/// Delete this object from C++ memory
	[LinkName("QGraphicsEffect_Delete")]
	public static extern void QGraphicsEffect_Delete(void* self);
}
public class QGraphicsColorizeEffect
{
	protected void* nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QGraphicsColorizeEffect_new();
	}
	
	public ~this()
	{
		CQt.QGraphicsColorizeEffect_Delete(this.nativePtr);
	}
	
	public virtual void* MetaObject()
	{
		return CQt.QGraphicsColorizeEffect_MetaObject(this.nativePtr);
	}
	
	public virtual void* Metacast(char8[] param1)
	{
		return CQt.QGraphicsColorizeEffect_Metacast(this.nativePtr, param1);
	}
	
	public virtual int32 Metacall(int64 param1, int32 param2, void** param3)
	{
		return CQt.QGraphicsColorizeEffect_Metacall(this.nativePtr, param1, param2, param3);
	}
	
	public static libqt_string Tr(char8[] s)
	{
		return CQt.QGraphicsColorizeEffect_Tr(s);
	}
	
	public void Color()
	{
		CQt.QGraphicsColorizeEffect_Color(this.nativePtr);
	}
	
	public double Strength()
	{
		return CQt.QGraphicsColorizeEffect_Strength(this.nativePtr);
	}
	
	public void SetColor(void* c)
	{
		CQt.QGraphicsColorizeEffect_SetColor(this.nativePtr, c);
	}
	
	public void SetStrength(double strength)
	{
		CQt.QGraphicsColorizeEffect_SetStrength(this.nativePtr, strength);
	}
	
	public virtual void Draw(void* painter)
	{
		CQt.QGraphicsColorizeEffect_Draw(this.nativePtr, painter);
	}
	
	public static libqt_string Tr2(char8[] s, char8[] c)
	{
		return CQt.QGraphicsColorizeEffect_Tr2(s, c);
	}
	
	public static libqt_string Tr3(char8[] s, char8[] c, int32 n)
	{
		return CQt.QGraphicsColorizeEffect_Tr3(s, c, n);
	}
	
	public virtual void BoundingRectFor(void* sourceRect)
	{
		CQt.QGraphicsEffect_BoundingRectFor(this.nativePtr, sourceRect);
	}
	
	public void BoundingRect()
	{
		CQt.QGraphicsEffect_BoundingRect(this.nativePtr);
	}
	
	public bool IsEnabled()
	{
		return CQt.QGraphicsEffect_IsEnabled(this.nativePtr);
	}
	
	public void SetEnabled(bool enable)
	{
		CQt.QGraphicsEffect_SetEnabled(this.nativePtr, enable);
	}
